<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.MenuPrincipalActivity">


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/menu_principal"
        android:textColor="@color/fontWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="132dp"
        android:layout_height="96dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:onClick="botaoConsultarProduto"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/ic_search_white_24dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:textColor="@color/fontWhite"
        android:background="@color/colorPrimaryDark"
        android:text="Consultar Produto"
        android:onClick="botaoConsultarProduto"
        android:textAlignment="center"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="132dp"
        android:layout_height="96dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:onClick="botaoCarrinho"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/ic_shopping_cart_white_24dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/meu_carrinho"
        android:onClick="botaoCarrinho"
        android:paddingBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/fontWhite"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="132dp"
        android:layout_height="96dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:onClick="botaoFavoritos"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/ic_star_white_24dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/lista_de_favoritos"
        android:onClick="botaoFavoritos"
        android:textColor="@color/fontWhite"
        android:paddingBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/ivPremiumMenu"
        android:layout_width="132dp"
        android:layout_height="96dp"
        android:layout_marginTop="30dp"
        android:onClick="botaoPremium"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:srcCompat="@drawable/ic_mood_white_24dp" />

    <TextView
        android:id="@+id/tvPremiumMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/lista_premium"
        android:textAlignment="center"
        android:onClick="botaoPremium"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="10dp"
        android:textColor="@color/fontWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivPremiumMenu"
        app:layout_constraintTop_toBottomOf="@+id/ivPremiumMenu" />

</androidx.constraintlayout.widget.ConstraintLayout>